<resources>
    <string name="overview">Overview</string>
    <string name="tab_sunshine">Sunshine (Moonlight)</string>
    <string name="tab_logs">Logs</string>
    <string name="export">Export</string>
    <string name="clear">Clear</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_airplay">AirPlay</string>
    <string name="tab_displaylink">DisplayLink</string>
    <string name="displaylink_libs_status_imported">Libraries imported</string>
    <string name="displaylink_libs_status_missing">Libraries not found</string>
    <string name="displaylink_libs_status_active">Active</string>
    <string name="displaylink_libs_detail_imported">DisplayLink USB display support is ready</string>
    <string name="permissions_granted">Ready</string>
    <string name="permissions_granted_detail">All permissions granted</string>
    <string name="permissions_not_granted">Missing permissions</string>
    <string name="permissions_not_granted_detail">Certain features will not work</string>
    <string name="section_permissions">Permissions</string>
    <string name="section_display">Streaming</string>
    <string name="section_mirror">Mirror</string>
    <string name="section_input">Input</string>
    <string name="section_sunshine">Sunshine Settings</string>
    <string name="section_displaylink_libraries">DisplayLink Libraries</string>
    <string name="section_sunshine_controls">Controls</string>
    <string name="start">Start Sunshine Server</string>
    <string name="stop">Stop</string>
    <string name="sunshine_status_idle">Sunshine not running</string>
    <string name="sunshine_status_idle_detail">Tap Start to begin streaming</string>
    <string name="sunshine_status_waiting">Waiting for connection</string>
    <string name="sunshine_status_waiting_detail">Connect from Moonlight client</string>
    <string name="sunshine_status_casting">Sunshine active</string>
    <string name="sunshine_status_casting_detail">Streaming to connected client</string>
    <string name="touchscreen_control">Touchscreen</string>
    <string name="touchscreen_control_desc">Use the touchscreen on this device as an input for the virtual display. Content on the virtual display will be mirrored to this device. Only available while this app owns the virtual display.</string>
    <string name="touchscreen_control_desc_unavailable">Start a virtual display server to use this input</string>
    <string name="exit_vertical">Exit</string>
    <string name="back_vertical">Back</string>
    <string name="exit">Exit</string>
    <string name="authorize">Authorize</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="connect">Connect</string>
    <string name="width_label">Width</string>
    <string name="height_label">Height</string>
    <string name="refresh_rate_label">Refresh rate</string>
    <string name="manage_this_display">Manage This Display</string>
    <string name="manage_system_display_settings">Manage System Display Settings</string>
    <string name="extend_app_not_installed">Install the Extend app to proceed</string>
    <string name="touchscreen_unavailable">Touchscreen control is no longer available for this display.</string>
    <string name="status_not_started">Not started</string>
    <string name="status_started_not_authorized_server">Unauthorized (UID: %d)</string>
    <string name="status_authorized_server">Authorized (UID: %d)</string>
    <string name="status_authorized">Authorized</string>
    <string name="status_not_authorized">Unauthorized</string>
    <string name="shizuku_uid_dropped">Shizuku started as root. Using UID %d for compatibility.</string>
    <string name="version_format">Version: %1$s (Android %2$s)</string>
    <string name="version_unknown">Version: Unknown</string>
    <string name="export_log_needs_shizuku">Exporting log files requires Shizuku permission</string>
    <string name="website_label">Source: github.com/jqssun/android-display-mirror</string>
    <string name="shizuku_permission_status">Shizuku</string>
    <string name="resolution_explanation">This only controls the output resolution of the DisplayLink chip in the adapter. For USB-C DisplayPort connections, the resolution is determined by Android automatically.</string>
    <string name="preset_resolution">Preset</string>
    <string name="preset_portrait">Portrait</string>
    <string name="preset_landscape">Landscape</string>
    <string name="ip_address">IP address</string>
    <string name="port">Port</string>
    <string name="overlay_status">Display over other apps</string>
    <string name="trusted_display">Create as trusted virtual display</string>
    <string name="trusted_display_desc">Create the virtual display as a trusted display. This enables other apps to set keyboard policy and other features. Requires Shizuku.</string>
    <string name="display_flags">Virtual Display Flags</string>
    <string name="change_display_flags">Change Virtual Display Flags</string>
    <string name="display_flags_customize">Enable customization</string>
    <string name="display_flags_explanation">Flags used to create the trusted virtual display. Picks the recommended set for this Android version by default. Changes apply the next time a display is created. Combinations rejected by the system fall back to automatic; see Logs for details.</string>
    <string name="flag_public" translatable="false">PUBLIC</string>
    <string name="flag_public_desc">Apps can open windows on the display and the system may mirror the contents of other displays onto it. Unset creates a private display.</string>
    <string name="flag_presentation" translatable="false">PRESENTATION</string>
    <string name="flag_presentation_desc">Register as a presentation display. Apps may automatically project their content to it for second-screen experiences.</string>
    <string name="flag_secure" translatable="false">SECURE</string>
    <string name="flag_secure_desc">Mark the display secure. Creation requires the CAPTURE_SECURE_VIDEO_OUTPUT permission, which is reserved for system components.</string>
    <string name="flag_insecure_keyguard" translatable="false">CAN_SHOW_WITH_INSECURE_KEYGUARD</string>
    <string name="flag_insecure_keyguard_desc">Allow content to be displayed while the keyguard is shown but insecure. Private displays only; mutually exclusive with PUBLIC.</string>
    <string name="flag_supports_touch" translatable="false">SUPPORTS_TOUCH</string>
    <string name="flag_supports_touch_desc">The display can be associated with a touchpad device that matches its unique ID.</string>
    <string name="flag_destroy_content" translatable="false">DESTROY_CONTENT_ON_REMOVAL</string>
    <string name="flag_destroy_content_desc">Destroy contents once the display is removed. Public displays without this flag move their content to the main display stack.</string>
    <string name="flag_system_decorations" translatable="false">SHOULD_SHOW_SYSTEM_DECORATIONS</string>
    <string name="flag_system_decorations_desc">Support and always show system decorations: home, navigation bar and wallpaper. Does not work without TRUSTED.</string>
    <string name="flag_trusted" translatable="false">TRUSTED</string>
    <string name="flag_trusted_desc">Trust the display to show system decorations and receive inputs without the user\'s touch.</string>
    <string name="flag_own_display_group" translatable="false">OWN_DISPLAY_GROUP</string>
    <string name="flag_own_display_group_desc">Place the display in a new display group instead of the default display group.</string>
    <string name="flag_always_unlocked" translatable="false">ALWAYS_UNLOCKED</string>
    <string name="flag_always_unlocked_desc">Keep the display unlocked with no keyguard on it. Only valid for displays that are not in the default display group.</string>
    <string name="flag_touch_feedback_disabled" translatable="false">TOUCH_FEEDBACK_DISABLED</string>
    <string name="flag_touch_feedback_disabled_desc">Do not play sound effects or perform haptic feedback when the user touches the screen.</string>
    <string name="flag_own_focus" translatable="false">OWN_FOCUS</string>
    <string name="flag_own_focus_desc">Maintain own focus and touch mode. The display must be trusted to have its own focus.</string>
    <string name="flag_device_display_group" translatable="false">DEVICE_DISPLAY_GROUP</string>
    <string name="flag_device_display_group_desc">Place the display in a display group associated with its virtual device instead of the default display group.</string>
    <string name="flag_steal_top_focus_disabled" translatable="false">STEAL_TOP_FOCUS_DISABLED</string>
    <string name="flag_steal_top_focus_disabled_desc">Do not become the top focused display by stealing top focus from another display. Ignored without OWN_FOCUS.</string>
    <string name="mirror_only">Mirror only</string>
    <string name="mirror_only_desc">Always mirror the built-in screen to the external display using MediaProjection. Launching apps onto the display will not be possible.</string>
    <string name="cast_placeholder_message">Please select an application to cast via \"Manage This Display\" or use \"Mirror only\" mode.</string>
    <string name="rotate_with_content">Rotate with content</string>
    <string name="rotate_with_content_desc">Rotate the image on the external display with content displayed.</string>
    <string name="crop_black_borders">Fill video stream to remove black borders</string>
    <string name="crop_black_borders_desc">Automatically zoom in to crop out black borders detected around any streamed image.</string>
    <string name="input_to_external_display">Send input to external display</string>
    <string name="input_to_external_display_desc">Route remote keyboard, mouse, touch, and controller input to the external display instead of the device screen.</string>
    <string name="auto_match_aspect_ratio">Match external display aspect ratio</string>
    <string name="auto_match_aspect_ratio_desc">Adjust built-in screen to match the external display aspect ratio in mirror mode.</string>
    <string name="prevent_auto_lock">Prevent auto-lock</string>
    <string name="prevent_auto_lock_desc">Modifies the system screen timeout setting.</string>
    <string name="use_global_audio_capture">Use global audio capture</string>
    <string name="use_global_audio_capture_desc">Capture all audio output via REMOTE_SUBMIX, including unsupported content.</string>
    <string name="auto_connect_sunshine">Auto-connect Moonlight (Beta)</string>
    <string name="auto_connect_sunshine_desc">Proactively send a JSON connect request to the Moonlight client. Requires a fork with the autostart listener. Not compatible with standard Moonlight.</string>
    <string name="show_sunshine_cursor">Show cursor location</string>
    <string name="show_sunshine_cursor_desc">Show a cursor overlay on the device screen for Moonlight mouse input.</string>
    <string name="sunshine_h265">Use H.265 (HEVC)</string>
    <string name="sunshine_h265_desc">Stream in H.265 when this device supports it. Turn off to force H.264 instead.</string>
    <string name="sunshine_device_name">Device name</string>
    <string name="section_airplay_controls">Controls</string>
    <string name="section_airplay">AirPlay Settings</string>
    <string name="airplay1_mode">Support for legacy 3rd party receivers</string>
    <string name="airplay1_mode_desc">Enable only when used with legacy receivers including Anker Nebula Cast (AirPin) which do not have modern AirPlay support.</string>
    <string name="about_airplay_notice">This app is not affiliated with Apple.</string>
    <string name="airplay_discover">Scan for AirPlay receivers</string>
    <string name="airplay_no_devices">AirPlay receiver not connected</string>
    <string name="airplay_no_devices_detail">Search for receivers on your network</string>
</resources>