<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/ic_overview"
        android:title="@string/tab_home" />
    <item
        android:id="@+id/airplay_fragment"
        android:icon="@drawable/ic_airplay"
        android:title="@string/tab_airplay" />
    <item
        android:id="@+id/displaylink_fragment"
        android:icon="@drawable/ic_displaylink"
        android:title="@string/tab_displaylink" />
    <item
        android:id="@+id/logs_fragment"
        android:icon="@drawable/ic_logs"
        android:title="@string/tab_logs" />
    <item
        android:id="@+id/settings_fragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/tab_settings" />
</menu>
