<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/overview_fragment">

    <fragment
        android:id="@+id/overview_fragment"
        android:name="io.github.jqssun.displaymirror.OverviewFragment"
        android:label="@string/overview">
        <action android:id="@+id/action_overview_to_moonlight" app:destination="@id/moonlight_fragment" />
        <action android:id="@+id/action_overview_to_airplay" app:destination="@id/airplay_fragment" />
        <action android:id="@+id/action_overview_to_displaylink" app:destination="@id/displaylink_fragment" />
    </fragment>

    <fragment
        android:id="@+id/moonlight_fragment"
        android:name="io.github.jqssun.displaymirror.MoonlightFragment"
        android:label="@string/tab_moonlight" />

    <fragment
        android:id="@+id/displaylink_fragment"
        android:name="io.github.jqssun.displaymirror.DisplayLinkFragment"
        android:label="@string/tab_displaylink" />

    <fragment
        android:id="@+id/airplay_fragment"
        android:name="io.github.jqssun.displaymirror.AirPlayFragment"
        android:label="@string/tab_airplay" />

    <fragment
        android:id="@+id/logs_fragment"
        android:name="io.github.jqssun.displaymirror.LogsFragment"
        android:label="@string/tab_logs" />

    <fragment
        android:id="@+id/settings_fragment"
        android:name="io.github.jqssun.displaymirror.SettingsFragment"
        android:label="@string/tab_settings" />

</navigation>
